java-service/java-service-blue-green-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cloudnative-java-service
spec:
  replicas: 2
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cloudnative-java-service
    spec:
      containers:
        - image: stmalike/cloudnative-java-service
          imagePullPolicy: Always
          name: cloudnative-java-service
          resources:
            limits:
              memory: "64Mi"
              cpu: "1"
            requests:
              memory: "64Mi"
              cpu: "0.5"
          ports:
            - containerPort: 8080
