java-service/java-service-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloudnative-java-service-2
  labels:
    app: cloudnative-java-service
    version: cloudnative-java-service-2
spec:
  containers:
  - image: stmalike/java-service
    name: cloudnative-java-service
    ports:
    - containerPort: 8080
    volumeMounts:
      - name: cloudnative-config
        mountPath: "/config" 
        readOnly: true
  volumes:
  - name: cloudnative-config
    configMap:
      name: cloudnative-config 
      items:
      - key: application.properties
        path: application.properties
