java-service/java-service-canary-istio-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cloudnative-java-service-canary
  labels:
    app: cloudnative-java-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cloudnative-java-service
        version: cloudnative-java-service-canary
    spec:
      containers:
      - image: stmalike/java-service
        imagePullPolicy: IfNotPresent
        name: cloudnative-java-service-canary
        ports:
         - containerPort: 8080
        volumeMounts:
          - name: cloudnative-config
            mountPath: "/config" 
            readOnly: true
      volumes:
      - name: cloudnative-config
        configMap:
          name: cloudnative-config 
          items:
          - key: application.properties
            path: application.properties
---
apiVersion: v1
kind: Service
metadata:
  name: cloudnative-java-service-canary
  labels:
    app: cloudnative-java-service
spec:
  ports:
  - port: 9191
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: cloudnative-java-service
