java-service/java-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service-lb
spec:
  type: LoadBalancer
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 8080
  selector:
    app: cloudnative-java-service
